--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.11.4)
 
 # Define the project
-project(cpp-music LANGUAGES CXX)
+project(music LANGUAGES CXX)
 
 # Get CMake modules from Git
 include(FetchContent)
@@ -21,6 +21,7 @@ tnt_project_New(${PROJECT_NAME}
 tnt_project_ConanInstall(${PROJECT_NAME})
 include(${CMAKE_BINARY_DIR}/conan_paths.cmake)
 find_package(Catch2 REQUIRED)
+find_package(math REQUIRED)
 
 # Enable testing for the project
 # Note: must be in top level CMakeLists.txt
