--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,10 +3,11 @@ include(Catch)
 add_executable(${PROJECT_NAME}_test
     # TODO: <files>
     main.cpp
-)
+ "note_test.cpp")
 
 target_link_libraries(${PROJECT_NAME}_test
     tnt::${PROJECT_NAME}
+    tnt::math
     Catch2::Catch2WithMain
 )
 
