--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,11 @@ project(music LANGUAGES CXX)
 
 # Get CMake modules from Git
 include(FetchContent)
-FetchContent_Declare(CMakeModules GIT_REPOSITORY https://github.com/tnt-coders/cmake-modules.git)
-FetchContent_MakeAvailable(CMakeModules)
+FetchContent_Declare(cmake-modules
+  GIT_REPOSITORY https://github.com/tnt-coders/cmake-modules.git
+  GIT_TAG main
+)
+FetchContent_MakeAvailable(cmake-modules)
 
 # Include the required modules
 include(tnt/project/Project)
@@ -19,7 +22,7 @@ tnt_project_New(${PROJECT_NAME}
 
 # Find and install dependencies
 tnt_project_ConanInstall(${PROJECT_NAME})
-include(${CMAKE_BINARY_DIR}/conan_paths.cmake)
+include(${CMAKE_CURRENT_BINARY_DIR}/conan_paths.cmake)
 find_package(Catch2 REQUIRED)
 find_package(math REQUIRED)
 
@@ -27,7 +30,6 @@ find_package(math REQUIRED)
 # Note: must be in top level CMakeLists.txt
 enable_testing()
 
-add_subdirectory(docs)
 add_subdirectory(src)
 add_subdirectory(test)
 
