--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ tnt_project_New(${PROJECT_NAME}
 # Find and install dependencies
 tnt_project_ConanInstall(${PROJECT_NAME})
 include(${CMAKE_CURRENT_BINARY_DIR}/conan_paths.cmake)
+find_package(Boost REQUIRED)
 find_package(Catch2 REQUIRED)
 find_package(math REQUIRED)
 
