--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,8 @@ tnt_project_New(${PROJECT_NAME}
 # Find and install dependencies
 tnt_project_ConanInstall(${PROJECT_NAME})
 include(${CMAKE_CURRENT_BINARY_DIR}/conan_paths.cmake)
-find_package(Boost REQUIRED)
-find_package(Catch2 REQUIRED)
-find_package(math REQUIRED)
+find_package(Catch2 CONFIG REQUIRED)
+find_package(math CONFIG REQUIRED)
 
 # Enable testing for the project
 # Note: must be in top level CMakeLists.txt
