--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,10 @@
 include(Catch)
 
 add_executable(${PROJECT_NAME}_test
-    # TODO: <files>
     main.cpp
- "note_test.cpp")
+    note_test.cpp
+    xml_test.cpp
+)
 
 target_link_libraries(${PROJECT_NAME}_test
     tnt::${PROJECT_NAME}
